pushing new react structure

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,6 +1,7 @@
 /* Header.css */
 .navbar {
     font-family: 'Helvetica', sans-serif;
+    margin-bottom: 0; /* Remove bottom margin */
   }
   
   .navbar-brand {
