--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,6 +2,7 @@
 .navbar {
     font-family: 'Helvetica', sans-serif;
     margin-bottom: 0; /* Remove bottom margin */
+    padding-bottom: 0; /* Remove bottom padding */
   }
   
   .navbar-brand {
