--- a/src/App.css
+++ b/src/App.css
@@ -77,8 +77,7 @@ section {
   background-color: #ced4da;
 }
 
-.navbar {
-  padding: 10px 20px;
+.navbar {;
 }
 
 .navbar-brand {
@@ -90,7 +89,7 @@ section {
 }
 
 .section {
-  padding: 50px 0;
+  padding: 50px;
   margin: 0; /* Remove margin */
 }
 
