--- a/src/components/SupportedBy.css
+++ b/src/components/SupportedBy.css
@@ -1,17 +1,34 @@
 /* SupportedBy.css */
+.section {
+  padding: 50px 0;
+  margin: 0; /* Remove margin */
+}
+
+.section:nth-child(odd) {
+  background-color: #f8f9fa; /* Light grey background for odd sections */
+}
+
+.section:nth-child(even) {
+  background-color: #ffffff; /* White background for even sections */
+}
+
+.text-center {
+  text-align: center;
+}
+
 .supporter {
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  
-  .supporter img {
-    width: 150px;
-    height: 150px;
-    object-fit: cover;
-    margin-bottom: 10px;
-  }
-  
-  .supporter h3 {
-    font-size: 1.25rem;
-    margin-bottom: 5px;
-  }
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.supporter img {
+  width: 300px; /* Set a fixed width */
+  height: 300px; /* Set a fixed height */
+  object-fit: contain; /* Ensure the whole image is displayed */
+  margin-bottom: 10px;
+}
+
+.supporter h3 {
+  font-size: 1.25rem;
+  margin-bottom: 5px;
+}
