--- a/src/components/Team.css
+++ b/src/components/Team.css
@@ -1,22 +1,38 @@
 /* Team.css */
+.section {
+  padding: 50px 0;
+  margin: 0; /* Remove margin */
+}
+
+.section:nth-child(odd) {
+  background-color: #f8f9fa; /* Light grey background for odd sections */
+}
+
+.section:nth-child(even) {
+  background-color: #ffffff; /* White background for even sections */
+}
+
+.text-center {
+  text-align: center;
+}
+
 .team-member {
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  
-  .team-member img {
-    width: 150px;
-    height: 150px;
-    object-fit: cover;
-    margin-bottom: 10px;
-  }
-  
-  .team-member h3 {
-    font-size: 1.25rem;
-    margin-bottom: 5px;
-  }
-  
-  .team-member p {
-    font-size: 1rem;
-    color: #666;
-  }
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.team-member img {
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  margin-bottom: 10px;
+}
+
+.team-member h3 {
+  font-size: 1.25rem;
+  margin-bottom: 5px;
+}
+
+.alumni img {
+  filter: grayscale(100%);
+}
