--- a/src/components/Work.css
+++ b/src/components/Work.css
@@ -1,17 +1,63 @@
 /* Work.css */
 .section {
-    padding: 50px 0;
-    margin: 0; /* Remove margin */
-  }
-  
-  .section:nth-child(odd) {
-    background-color: #f8f9fa; /* Light grey background for odd sections */
-  }
-  
-  .section:nth-child(even) {
-    background-color: #ffffff; /* White background for even sections */
-  }
-  
-  .text-center {
-    text-align: center;
-  }
+  padding: 50px 0;
+  margin: 0; /* Remove margin */
+}
+
+.section:nth-child(odd) {
+  background-color: #f8f9fa; /* Light grey background for odd sections */
+}
+
+.section:nth-child(even) {
+  background-color: #ffffff; /* White background for even sections */
+}
+
+.text-center {
+  text-align: center;
+}
+
+.pagination-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.pagination-buttons button {
+  background-color: #007bff;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  margin: 0 5px;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+.pagination-buttons button:disabled {
+  background-color: #cccccc;
+  cursor: not-allowed;
+}
+
+.pagination-buttons span {
+  margin: 0 10px;
+}
+
+.page-buttons {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.page-buttons button {
+  background-color: #007bff;
+  border: none;
+  color: white;
+  padding: 5px 10px;
+  margin: 0 2px;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+.page-buttons button.active {
+  background-color: #0056b3;
+}
