edit profile layout, add functionality to navbar from profile page, add images and bio for some members

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -12,6 +12,10 @@
   .nav-link {
     margin-left: 15px;
   }
+
+  .navbar-nav {
+    margin-left: 0; /* Ensure no left margin */
+  }
   
   .section-title {
     font-weight: bold;
