--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -4,23 +4,28 @@
   }
   
   #profile img {
-    width: 150px;
-    height: 150px;
+    width: 350px;
+    height: 500px;
     object-fit: cover;
     margin-bottom: 10px;
   }
   
   #profile h2 {
     font-size: 2rem;
-    margin-bottom: 10px;
+    margin-bottom: 75px;
   }
   
   #profile h3 {
-    font-size: 1.5rem;
-    margin-bottom: 10px;
+    font-size: 2.5rem;
+    margin-bottom: 50px;
   }
   
   #profile p {
     font-size: 1rem;
     color: #666;
+  }
+
+  .bio-text {
+    text-align: justify;
+    text-justify: inter-word;
   }
